<resources>
    <string name="app_name">EgyTick</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="google_map_api_key">AIzaSyByLPhKAIVkp58GsysbwEQkgtAkLp2E308</string>

    <string name="title_login">LOGIN</string>
    <string name="et_hint_email">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="register"><u>Register</u></string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="or_login_with_google">Or Login with Google</string>

    <string name="title_forgot_password">Forgot Password</string>
    <string name="btn_lbl_reset_password">Reset Password</string>


    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name. </string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password aren\'t matching</string>
    <string name="succ_msg_register">Thanks for registering</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="cities">Cities</string>
    <string name="city_description">City Description</string>
    <string name="places">Places</string>
    <string name="city_name">City Name</string>

    <string-array name="visitor_type_array">
        <item>Egyptians/Arabs</item>
        <item>Foreigners</item>
    </string-array>

    <string-array name="visitor_category_array">
        <item>Adult</item>
        <item>Student</item>
    </string-array>


    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID_HERE</string>
    <string name="review">Review</string>
    <string name="book">Book</string>
    <string name="book_a_visit">Book a Visit</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="email">Email</string>
    <string name="change_your_password">Change your password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update">Update</string>
    <string name="book_a_ticket">book a ticket</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reviews">Reviews</string>
    <string name="cleanliness">Cleanliness:</string>
    <string name="facilities">Facilities:</string>
    <string name="staff">Staff:</string>
    <string name="your_average_rating_0_0">Your average rating: 0.0</string>
    <string name="overall_average_rating_0_0">Overall average rating: 0.0</string>
    <string name="submit">Submit</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="booking_date">Booking Date</string>
    <string name="review_text">Review text</string>
    <string name="rating">Rating</string>
    <string name="logout">logout</string>
    <string name="no_places_found">No places found with this name</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="ticket_prices">Ticket Prices</string>

</resources>
